# Contact_Manager_1.1

./: CMakeLists.txt  Contact_Manager_Presentation.pptx  Makefile  PowerPoint_Guide.md  Project  af.txt  contact_manager  contact_manager.c  contact_manager.h  contact_manager_ready  contacts.txt  contacts_terminal  contacts_terminal.c  file_ops.c  main  main.c  main_backup.c  readme.md  readme2.md  run_contact_manager.sh
ContactManager.app/Contents/: Info.plist
ContactManager.app/Contents/MacOS/: ContactManager
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
